lib/common-music/sa/include/sa.h

EXPORT SpecInterp *_wrap_new_SpecInterp (float larg1, SndObj *larg2, SndObj *larg3, SndObj *larg4, int larg5, float larg6);
EXPORT void _wrap_delete_SpecInterp (SpecInterp *larg1);
EXPORT int _wrap_SpecInterp_Connect (SpecInterp *larg1, char *larg2, void *larg3);
EXPORT int _wrap_SpecInterp_Set (SpecInterp *larg1, char *larg2, float larg3);
EXPORT void _wrap_SpecInterp_SetInterp (SpecInterp *larg1, float larg2, SndObj *larg3);
EXPORT PVMask *_wrap_new_PVMask_empty ();
EXPORT PVMask *_wrap_new_PVMask (float larg1, SndObj *larg2, SndObj *larg3, SndObj *larg4, int larg5, float larg6);
EXPORT PVMask *_wrap_new_PVMask_table (float larg1, Table *larg2, SndObj *larg3, SndObj *larg4, int larg5, float larg6);
EXPORT void _wrap_delete_PVMask (PVMask *larg1);
EXPORT int _wrap_PVMask_Connect (PVMask *larg1, char *larg2, void *larg3);
EXPORT int _wrap_PVMask_Set (PVMask *larg1, char *larg2, float larg3);
EXPORT void _wrap_PVMask_SetMaskInput (PVMask *larg1, SndObj *larg2);
EXPORT void _wrap_PVMask_SetMaskTable (PVMask *larg1, Table *larg2);
EXPORT void _wrap_PVMask_SetMaskGain (PVMask *larg1, float larg2, SndObj *larg3);
EXPORT int _wrap_PVTransp_Set (PVTransp *larg1, char *larg2, float larg3);
EXPORT int _wrap_PVTransp_Connect (PVTransp *larg1, char *larg2, void *larg3);
EXPORT void _wrap_PVTransp_SetPitch (PVTransp *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_PVTransp_SetMode (PVTransp *larg1, int larg2);
EXPORT PVTransp *_wrap_new_PVTransp_empty ();
EXPORT PVTransp *_wrap_new_PVTransp (SndObj *larg1, float larg2, int larg3, SndObj *larg4, int larg5, float larg6);
EXPORT void _wrap_delete_PVTransp (PVTransp *larg1);
EXPORT PVMix *_wrap_new_PVMix_empty ();
EXPORT PVMix *_wrap_new_PVMix (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_PVMix (PVMix *larg1);
EXPORT int _wrap_PVBlur_Set (PVBlur *larg1, char *larg2, float larg3);
EXPORT void _wrap_PVBlur_SetBlurTime (PVBlur *larg1, float larg2);
EXPORT void _wrap_PVBlur_SetHopsize (PVBlur *larg1, int larg2);
EXPORT PVBlur *_wrap_new_PVBlur_empty ();
EXPORT PVBlur *_wrap_new_PVBlur (SndObj *larg1, float larg2, int larg3, int larg4, float larg5);
EXPORT void _wrap_delete_PVBlur (PVBlur *larg1);
EXPORT PVFilter *_wrap_new_PVFilter_empty ();
EXPORT PVFilter *_wrap_new_PVFilter (SndObj *larg1, SndObj *larg2, float larg3, SndObj *larg4, int larg5, float larg6);
EXPORT PVFilter *_wrap_new_PVFilter_table (Table *larg1, SndObj *larg2, float larg3, SndObj *larg4, int larg5, float larg6);
EXPORT void _wrap_delete_PVFilter (PVFilter *larg1);
EXPORT int _wrap_PVFilter_Connect (PVFilter *larg1, char *larg2, void *larg3);
EXPORT int _wrap_PVFilter_Set (PVFilter *larg1, char *larg2, float larg3);
EXPORT void _wrap_PVFilter_SetFilterInput (PVFilter *larg1, SndObj *larg2);
EXPORT void _wrap_PVFilter_SetFilterTable (PVFilter *larg1, Table *larg2);
EXPORT void _wrap_PVFilter_SetAmount (PVFilter *larg1, float larg2, SndObj *larg3);
EXPORT PVMorph *_wrap_new_PVMorph_empty ();
EXPORT PVMorph *_wrap_new_PVMorph (float larg1, float larg2, SndObj *larg3, SndObj *larg4, SndObj *larg5, SndObj *larg6, int larg7, float larg8);
EXPORT void _wrap_delete_PVMorph (PVMorph *larg1);
EXPORT int _wrap_PVMorph_Connect (PVMorph *larg1, char *larg2, void *larg3);
EXPORT int _wrap_PVMorph_Set (PVMorph *larg1, char *larg2, float larg3);
EXPORT void _wrap_PVMorph_SetFreqMorph (PVMorph *larg1, float larg2, SndObj *larg3);
EXPORT void _wrap_PVMorph_SetAmpMorph (PVMorph *larg1, float larg2, SndObj *larg3);
EXPORT SpecPolar *_wrap_new_SpecPolar_empty ();
EXPORT SpecPolar *_wrap_new_SpecPolar (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_SpecPolar (SpecPolar *larg1);
EXPORT void _wrap_SpecSplit_magnitude_set (SpecSplit *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SpecSplit_magnitude_get (SpecSplit *larg1);
EXPORT void _wrap_SpecSplit_phase_set (SpecSplit *larg1, SndObj *larg2);
EXPORT SndObj *_wrap_SpecSplit_phase_get (SpecSplit *larg1);
EXPORT SpecSplit *_wrap_new_SpecSplit_empty ();
EXPORT SpecSplit *_wrap_new_SpecSplit (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_SpecSplit (SpecSplit *larg1);
EXPORT void _wrap_SpecThresh_SetThreshold (SpecThresh *larg1, float larg2);
EXPORT int _wrap_SpecThresh_Set (SpecThresh *larg1, char *larg2, float larg3);
EXPORT SpecThresh *_wrap_new_SpecThresh_empty ();
EXPORT SpecThresh *_wrap_new_SpecThresh (float larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_SpecThresh (SpecThresh *larg1);
EXPORT SpecVoc *_wrap_new_SpecVoc_empty ();
EXPORT SpecVoc *_wrap_new_SpecVoc (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_SpecVoc (SpecVoc *larg1);
EXPORT SpecCart *_wrap_new_SpecCart_empty ();
EXPORT SpecCart *_wrap_new_SpecCart (SndObj *larg1, int larg2, float larg3);
EXPORT void _wrap_delete_SpecCart (SpecCart *larg1);
EXPORT SpecCombine *_wrap_new_SpecCombine_empty ();
EXPORT SpecCombine *_wrap_new_SpecCombine (SndObj *larg1, SndObj *larg2, int larg3, float larg4);
EXPORT void _wrap_delete_SpecCombine (SpecCombine *larg1);
EXPORT void _wrap_SpecCombine_SetPhaseInput (SpecCombine *larg1, SndObj *larg2);
EXPORT void _wrap_SpecCombine_SetMagInput (SpecCombine *larg1, SndObj *larg2);
EXPORT int _wrap_SpecCombine_Connect (SpecCombine *larg1, char *larg2, void *larg3);
EXPORT SpecIn *_wrap_new_SpecIn_empty ();
EXPORT SpecIn *_wrap_new_SpecIn (SndFIO *larg1, short larg2, int larg3, float larg4);
EXPORT void _wrap_delete_SpecIn (SpecIn *larg1);
EXPORT void _wrap_SpecIn_SetInput (SpecIn *larg1, SndIO *larg2, short larg3);
EXPORT int _wrap_SpecIn_Connect (SpecIn *larg1, char *larg2, void *larg3);
EXPORT int _wrap_SpecIn_Set (SpecIn *larg1, char *larg2, float larg3);
EXPORT char *_wrap_SpecIn_ErrorMessage (SpecIn *larg1);
EXPORT Convol *_wrap_new_Convol_empty ();
EXPORT Convol *_wrap_new_Convol (Table *larg1, SndObj *larg2, float larg3, int larg4, float larg5);
EXPORT void _wrap_delete_Convol (Convol *larg1);
EXPORT int _wrap_Convol_Connect (Convol *larg1, char *larg2, void *larg3);
EXPORT int _wrap_Convol_Set (Convol *larg1, char *larg2, float larg3);
EXPORT void _wrap_Convol_SetImpulse (Convol *larg1, Table *larg2, float larg3);
EXPORT FILE *_wrap_SndFIO_GetFile (SndFIO *larg1);
EXPORT short _wrap_SndFIO_GetMode (SndFIO *larg1);
EXPORT void _wrap_SndFIO_SetPos_float (SndFIO *larg1, float larg2);
EXPORT void _wrap_SndFIO_SetPos (SndFIO *larg1, long larg2);
EXPORT int _wrap_SndFIO_Eof (SndFIO *larg1);
EXPORT long _wrap_SndFIO_GetDataFrames (SndFIO *larg1);
EXPORT float _wrap_SndFIO_GetPos (SndFIO *larg1);
EXPORT short _wrap_SndFIO_GetStatus (SndFIO *larg1);
EXPORT SndFIO *_wrap_new_SndFIO (char *larg1, short larg2, short larg3, short larg4, SndObj **larg5, float larg6, int larg7, float larg8);
EXPORT void _wrap_delete_SndFIO (SndFIO *larg1);
EXPORT short _wrap_SndFIO_Read (SndFIO *larg1);
EXPORT short _wrap_SndFIO_Write (SndFIO *larg1);
EXPORT char *_wrap_SndFIO_ErrorMessage (SndFIO *larg1);
EXPORT wave_head *_wrap_SndWave_GetHeader (SndWave *larg1);
EXPORT SndWave *_wrap_new_SndWave (char *larg1, short larg2, short larg3, short larg4, SndObj **larg5, float larg6, int larg7, float larg8);
EXPORT void _wrap_delete_SndWave (SndWave *larg1);
EXPORT short _wrap_SndWave_Read (SndWave *larg1);
EXPORT short _wrap_SndWave_Write (SndWave *larg1);
EXPORT bool _wrap_SndWave_IsWave (SndWave *larg1);
EXPORT char *_wrap_SndWave_ErrorMessage (SndWave *larg1);
EXPORT Synth *_wrap_new_Synth (int larg1, SndObj **larg2, long larg3, void (*larg4)(SndObj *), int larg5, float larg6);