lib/common-music/sa/cffi-sa.lisp


(defcfun ("_wrap_new_SpecInterp" new_SpecInterp) :sndobj_specinterp
  (i_offset :float)
  (input1 :sndobj)
  (input2 :sndobj)
  (interpobj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SpecInterp" delete_SpecInterp) :void
  (self :sndobj_specinterp))

(defcfun ("_wrap_SpecInterp_Connect" SpecInterp_Connect) :int
  (self :sndobj_specinterp)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_SpecInterp_Set" SpecInterp_Set) :int
  (self :sndobj_specinterp)
  (mess :string)
  (value :float))

(defcfun ("_wrap_SpecInterp_SetInterp" SpecInterp_SetInterp) :void
  (self :sndobj_specinterp)
  (i_offset :float)
  (interpobj :sndobj))

(defcfun ("_wrap_new_PVMask_empty" new_PVMask_empty) :sndobj_pvmask)

(defcfun ("_wrap_new_PVMask" new_PVMask) :sndobj_pvmask
  (maskgain :float)
  (input :sndobj)
  (mask :sndobj)
  (inmaskgobj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_PVMask_table" new_PVMask_table) :sndobj_pvmask
  (maskgain :float)
  (masktable :sndobj_table)
  (input :sndobj)
  (inmaskgobj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PVMask" delete_PVMask) :void
  (self :sndobj_pvmask))

(defcfun ("_wrap_PVMask_Connect" PVMask_Connect) :int
  (self :sndobj_pvmask)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_PVMask_Set" PVMask_Set) :int
  (self :sndobj_pvmask)
  (mess :string)
  (value :float))

(defcfun ("_wrap_PVMask_SetMaskInput" PVMask_SetMaskInput) :void
  (self :sndobj_pvmask)
  (mask :sndobj))

(defcfun ("_wrap_PVMask_SetMaskTable" PVMask_SetMaskTable) :void
  (self :sndobj_pvmask)
  (mask :sndobj_table))

(defcfun ("_wrap_PVMask_SetMaskGain" PVMask_SetMaskGain) :void
  (self :sndobj_pvmask)
  (maskgain :float)
  (inmaskg :sndobj))

(defcfun ("_wrap_PVTransp_Set" PVTransp_Set) :int
  (self :sndobj_pvtransp)
  (mess :string)
  (value :float))

(defcfun ("_wrap_PVTransp_Connect" PVTransp_Connect) :int
  (self :sndobj_pvtransp)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_PVTransp_SetPitch" PVTransp_SetPitch) :void
  (self :sndobj_pvtransp)
  (pitch :float)
  (inpitch :sndobj))

(defcfun ("_wrap_PVTransp_SetMode" PVTransp_SetMode) :void
  (self :sndobj_pvtransp)
  (mode :int))

(defcfun ("_wrap_new_PVTransp_empty" new_PVTransp_empty) :sndobj_pvtransp)

(defcfun ("_wrap_new_PVTransp" new_PVTransp) :sndobj_pvtransp
  (input :sndobj)
  (pitch :float)
  (mode :int)
  (inpitch :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PVTransp" delete_PVTransp) :void
  (self :sndobj_pvtransp))

(defcfun ("_wrap_new_PVMix_empty" new_PVMix_empty) :sndobj_pvmix)

(defcfun ("_wrap_new_PVMix" new_PVMix) :sndobj_pvmix
  (input :sndobj)
  (input2 :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PVMix" delete_PVMix) :void
  (self :sndobj_pvmix))

(defcfun ("_wrap_PVBlur_Set" PVBlur_Set) :int
  (self :sndobj_pvblur)
  (mess :string)
  (value :float))

(defcfun ("_wrap_PVBlur_SetBlurTime" PVBlur_SetBlurTime) :void
  (self :sndobj_pvblur)
  (time :float))

(defcfun ("_wrap_PVBlur_SetHopsize" PVBlur_SetHopsize) :void
  (self :sndobj_pvblur)
  (hopsize :int))

(defcfun ("_wrap_new_PVBlur_empty" new_PVBlur_empty) :sndobj_pvblur)

(defcfun ("_wrap_new_PVBlur" new_PVBlur) :sndobj_pvblur
  (input :sndobj)
  (blurtime :float)
  (hopsize :int)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PVBlur" delete_PVBlur) :void
  (self :sndobj_pvblur))

(defcfun ("_wrap_new_PVFilter_empty" new_PVFilter_empty) :sndobj_pvfilter)

(defcfun ("_wrap_new_PVFilter" new_PVFilter) :sndobj_pvfilter
  (input :sndobj)
  (filspec :sndobj)
  (amnt :float)
  (amntobj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_new_PVFilter_table" new_PVFilter_table) :sndobj_pvfilter
  (filtertable :sndobj_table)
  (input :sndobj)
  (amnt :float)
  (amntobj :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PVFilter" delete_PVFilter) :void
  (self :sndobj_pvfilter))

(defcfun ("_wrap_PVFilter_Connect" PVFilter_Connect) :int
  (self :sndobj_pvfilter)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_PVFilter_Set" PVFilter_Set) :int
  (self :sndobj_pvfilter)
  (mess :string)
  (value :float))

(defcfun ("_wrap_PVFilter_SetFilterInput" PVFilter_SetFilterInput) :void
  (self :sndobj_pvfilter)
  (filobj :sndobj))

(defcfun ("_wrap_PVFilter_SetFilterTable" PVFilter_SetFilterTable) :void
  (self :sndobj_pvfilter)
  (filtab :sndobj_table))

(defcfun ("_wrap_PVFilter_SetAmount" PVFilter_SetAmount) :void
  (self :sndobj_pvfilter)
  (amnt :float)
  (amntobj :sndobj))

(defcfun ("_wrap_new_PVMorph_empty" new_PVMorph_empty) :sndobj_pvmorph)

(defcfun ("_wrap_new_PVMorph" new_PVMorph) :sndobj_pvmorph
  (morphfr :float)
  (morpha :float)
  (input1 :sndobj)
  (input2 :sndobj)
  (inmorphfr :sndobj)
  (inmorpha :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_PVMorph" delete_PVMorph) :void
  (self :sndobj_pvmorph))

(defcfun ("_wrap_PVMorph_Connect" PVMorph_Connect) :int
  (self :sndobj_pvmorph)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_PVMorph_Set" PVMorph_Set) :int
  (self :sndobj_pvmorph)
  (mess :string)
  (value :float))

(defcfun ("_wrap_PVMorph_SetFreqMorph" PVMorph_SetFreqMorph) :void
  (self :sndobj_pvmorph)
  (morphfr :float)
  (inmorphfr :sndobj))

(defcfun ("_wrap_PVMorph_SetAmpMorph" PVMorph_SetAmpMorph) :void
  (self :sndobj_pvmorph)
  (morpha :float)
  (inmorpha :sndobj))

(defcfun ("_wrap_new_SpecPolar_empty" new_SpecPolar_empty) :sndobj_specpolar)

(defcfun ("_wrap_new_SpecPolar" new_SpecPolar) :sndobj_specpolar
  (input :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SpecPolar" delete_SpecPolar) :void
  (self :sndobj_specpolar))

(defcfun ("_wrap_SpecSplit_magnitude_set" SpecSplit_magnitude_set) :void
  (self :sndobj_specsplit)
  (magnitude :sndobj))

(defcfun ("_wrap_SpecSplit_magnitude_get" SpecSplit_magnitude_get) :sndobj
  (self :sndobj_specsplit))

(defcfun ("_wrap_SpecSplit_phase_set" SpecSplit_phase_set) :void
  (self :sndobj_specsplit)
  (phase :sndobj))

(defcfun ("_wrap_SpecSplit_phase_get" SpecSplit_phase_get) :sndobj
  (self :sndobj_specsplit))

(defcfun ("_wrap_new_SpecSplit_empty" new_SpecSplit_empty) :sndobj_specsplit)

(defcfun ("_wrap_new_SpecSplit" new_SpecSplit) :sndobj_specsplit
  (input :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SpecSplit" delete_SpecSplit) :void
  (self :sndobj_specsplit))

(defcfun ("_wrap_SpecThresh_SetThreshold" SpecThresh_SetThreshold) :void
  (self :sndobj_specthresh)
  (thresh :float))

(defcfun ("_wrap_SpecThresh_Set" SpecThresh_Set) :int
  (self :sndobj_specthresh)
  (mess :string)
  (value :float))

(defcfun ("_wrap_new_SpecThresh_empty" new_SpecThresh_empty) :sndobj_specthresh)

(defcfun ("_wrap_new_SpecThresh" new_SpecThresh) :sndobj_specthresh
  (threshold :float)
  (input :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SpecThresh" delete_SpecThresh) :void
  (self :sndobj_specthresh))

(defcfun ("_wrap_new_SpecVoc_empty" new_SpecVoc_empty) :sndobj_specvoc)

(defcfun ("_wrap_new_SpecVoc" new_SpecVoc) :sndobj_specvoc
  (input :sndobj)
  (input2 :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SpecVoc" delete_SpecVoc) :void
  (self :sndobj_specvoc))

(defcfun ("_wrap_new_SpecCart_empty" new_SpecCart_empty) :sndobj_speccart)

(defcfun ("_wrap_new_SpecCart" new_SpecCart) :sndobj_speccart
  (input :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SpecCart" delete_SpecCart) :void
  (self :sndobj_speccart))

(defcfun ("_wrap_new_SpecCombine_empty" new_SpecCombine_empty) :sndobj_speccombine)

(defcfun ("_wrap_new_SpecCombine" new_SpecCombine) :sndobj_speccombine
  (magin :sndobj)
  (phasin :sndobj)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SpecCombine" delete_SpecCombine) :void
  (self :sndobj_speccombine))

(defcfun ("_wrap_SpecCombine_SetPhaseInput" SpecCombine_SetPhaseInput) :void
  (self :sndobj_speccombine)
  (phasin :sndobj))

(defcfun ("_wrap_SpecCombine_SetMagInput" SpecCombine_SetMagInput) :void
  (self :sndobj_speccombine)
  (magin :sndobj))

(defcfun ("_wrap_SpecCombine_Connect" SpecCombine_Connect) :int
  (self :sndobj_speccombine)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_new_SpecIn_empty" new_SpecIn_empty) :sndobj_specin)

(defcfun ("_wrap_new_SpecIn" new_SpecIn) :sndobj_specin
  (input :pointer)
  (channel :short)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SpecIn" delete_SpecIn) :void
  (self :sndobj_specin))

(defcfun ("_wrap_SpecIn_SetInput" SpecIn_SetInput) :void
  (self :sndobj_specin)
  (input :sndobj_sndio)
  (channel :short))

(defcfun ("_wrap_SpecIn_Connect" SpecIn_Connect) :int
  (self :sndobj_specin)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_SpecIn_Set" SpecIn_Set) :int
  (self :sndobj_specin)
  (mess :string)
  (value :float))

(defcfun ("_wrap_SpecIn_ErrorMessage" SpecIn_ErrorMessage) :string
  (self :sndobj_specin))

(defcfun ("_wrap_new_Convol_empty" new_Convol_empty) :sndobj_convol)

(defcfun ("_wrap_new_Convol" new_Convol) :sndobj_convol
  (impulse :sndobj_table)
  (input :sndobj)
  (scale :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_Convol" delete_Convol) :void
  (self :sndobj_convol))

(defcfun ("_wrap_Convol_Connect" Convol_Connect) :int
  (self :sndobj_convol)
  (mess :string)
  (input :pointer))

(defcfun ("_wrap_Convol_Set" Convol_Set) :int
  (self :sndobj_convol)
  (mess :string)
  (value :float))

(defcfun ("_wrap_Convol_SetImpulse" Convol_SetImpulse) :void
  (self :sndobj_convol)
  (impulse :sndobj_table)
  (scale :float))

(defcfun ("_wrap_SndFIO_GetFile" SndFIO_GetFile) :pointer
  (self :sndobj_sndfio))

(defcfun ("_wrap_SndFIO_GetMode" SndFIO_GetMode) :short
  (self :sndobj_sndfio))

(defcfun ("_wrap_SndFIO_SetPos_float" SndFIO_SetPos_float) :void
  (self :sndobj_sndfio)
  (pos :float))

(defcfun ("_wrap_SndFIO_SetPos" SndFIO_SetPos) :void
  (self :sndobj_sndfio)
  (pos :long))

(defcfun ("_wrap_SndFIO_Eof" SndFIO_Eof) :int
  (self :sndobj_sndfio))

(defcfun ("_wrap_SndFIO_GetDataFrames" SndFIO_GetDataFrames) :long
  (self :sndobj_sndfio))

(defcfun ("_wrap_SndFIO_GetPos" SndFIO_GetPos) :float
  (self :sndobj_sndfio))

(defcfun ("_wrap_SndFIO_GetStatus" SndFIO_GetStatus) :short
  (self :sndobj_sndfio))

(defcfun ("_wrap_new_SndFIO" new_SndFIO) :sndobj_sndfio
  (name :string)
  (mode :short)
  (channels :short)
  (bits :short)
  (inputlist :pointer)
  (spos :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndFIO" delete_SndFIO) :void
  (self :sndobj_sndfio))

(defcfun ("_wrap_SndFIO_Read" SndFIO_Read) :short
  (self :sndobj_sndfio))

(defcfun ("_wrap_SndFIO_Write" SndFIO_Write) :short
  (self :sndobj_sndfio))

(defcfun ("_wrap_SndFIO_ErrorMessage" SndFIO_ErrorMessage) :string
  (self :sndobj_sndfio))

(defcstruct wave_head
	(magic :long)
	(len0 :long)
	(magic1 :long)
	(magic2 :long)
	(len :long)
	(format :short)
	(nchns :short)
	(rate :long)
	(aver :long)
	(nBlockAlign :short)
	(size :short))

(defcstruct wave_data
	(magic3 :long)
	(datasize :long))

(defcfun ("_wrap_SndWave_GetHeader" SndWave_GetHeader) :pointer
  (self :sndobj_sndwave))

(defcfun ("_wrap_new_SndWave" new_SndWave) :sndobj_sndwave
  (name :string)
  (mode :short)
  (channels :short)
  (bits :short)
  (inputlist :pointer)
  (spos :float)
  (vecsize :int)
  (sr :float))

(defcfun ("_wrap_delete_SndWave" delete_SndWave) :void
  (self :sndobj_sndwave))

(defcfun ("_wrap_SndWave_Read" SndWave_Read) :short
  (self :sndobj_sndwave))

(defcfun ("_wrap_SndWave_Write" SndWave_Write) :short
  (self :sndobj_sndwave))

(defcfun ("_wrap_SndWave_IsWave" SndWave_IsWave) :boolean
  (self :sndobj_sndwave))

(defcfun ("_wrap_SndWave_ErrorMessage" SndWave_ErrorMessage) :string
  (self :sndobj_sndwave))

(defconstant WAVE_FORMAT_EXTENSIBLE #xFFFE)

(defconstant WAVE_FORMAT_PCM #x0001)

(defconstant WAVE_FORMAT_IEEE_FLOAT #x0003)

(defconstant SPEAKER_FRONT_LEFT #x1)

(defconstant SPEAKER_FRONT_RIGHT #x2)

(defconstant SPEAKER_FRONT_CENTER #x4)
